--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Learn French with Meriem, an experienced French teacher offering lessons for professionals, families, and diplomats. Special packs and personalized courses available.">
+    <meta name="keywords" content="Learn French, French lessons, French teacher, French for professionals, pronunciation lessons, French grammar, French tutor, French for diplomats, French for kids">
+    <meta name="author" content="Meriem Bensaid">
+    <meta property="og:title" content="Learn French with Meriem">
+    <meta property="og:description" content="French lessons with Meriem, experienced teacher for all levels including professionals, kids, and diplomats. Learn French from scratch or improve your skills.">
+    <meta property="og:image" content="IMG_2556.jpg">
+    <meta property="og:url" content="index.html">
     <title>French Lessons with Meriem</title>
     <style>
         /* General Styles */
@@ -80,6 +87,42 @@
 
         #tariffs p {
             font-size: 1.2em;
+        }
+
+        #tariffs ul {
+            list-style-type: disc;
+            padding-left: 40px; /* Indent bullets for better alignment */
+            text-align: left;
+        }
+
+        /* Testimonials Section */
+        #testimonials {
+            background-color: #dcdcdc;
+            padding: 40px;
+            text-align: center;
+        }
+
+        #testimonials h2 {
+            color: #4b0082;
+            font-size: 2.5em;
+            margin-bottom: 30px;
+        }
+
+        .testimonial {
+            background-color: white;
+            border: 1px solid #4b0082;
+            border-radius: 10px;
+            padding: 20px;
+            margin: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 80%;
+            display: inline-block;
+            font-style: italic;
+        }
+
+        .testimonial h3 {
+            color: #4b0082;
+            font-size: 1.5em;
         }
 
         /* Footer */
@@ -186,6 +229,23 @@
         </ul>
     </section>
 
+    <!-- Testimonials Section -->
+    <section id="testimonials">
+        <h2>What My Students Say</h2>
+        <div class="testimonial">
+            <h3>Samia and Sarah, Saudi Arabia</h3>
+            <p>"We started learning French from scratch and had a lot of fun along the way! Meriem's lessons were engaging, and we quickly built our skills. Now we speak French confidently and couldn't be happier with our progress!"</p>
+        </div>
+        <div class="testimonial">
+            <h3>A Stay-at-Home Mother, Dubai</h3>
+            <p>"I wanted to learn French to communicate better with my family and in my community. With Meriem's support, I am almost fluent, and the learning process has been so enjoyable. I’m grateful for her patience and guidance."</p>
+        </div>
+        <div class="testimonial">
+            <h3>A Researcher in Aeronautics, UAE</h3>
+            <p>"I needed French to read and write research papers, and Meriem was a great help. She tailored the lessons to my needs and helped me learn the technical vocabulary required for my work in aeronautics."</p>
+        </div>
+    </section>
+
     <!-- Language Switcher -->
     <div class="language-switcher">
         <label for="language-select">Choose a language:</label>
@@ -198,7 +258,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Contact me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <p>Contact me at: <a href="mailto:meriem@example.com">meriem@example.com</a></p>
     </footer>
 
     <script>
