--- a/index.html
+++ b/index.html
@@ -3,222 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="French lessons with Meriem - Learn French with a professional teacher with over 10 years of experience. Available in multiple languages.">
-    <meta name="keywords" content="French lessons, language teacher, learn French, professional teacher, tutoring, French tutor">
-    <meta name="author" content="Meriem Bensaid">
-    <title>French Lessons with Meriem</title>
+    <meta name="description" content="Learn French with Meriem Bensaid. Offering personalized French lessons in English, Arabic, French, and German. Expert in French for all levels.">
+    <title>Learn French with Meriem Bensaid</title>
     <style>
-        /* General Styles */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f5ff; /* Light yellow */
-            color: #4b0082; /* Purple */
+            background-color: #f4f4f9;
+            color: #333;
         }
-
-        /* Navigation Menu */
-        nav {
-            background-color: #4b0082; /* Purple */
-            padding: 10px;
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            text-align: center;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 15px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 10px;
-        }
-
-        nav ul li a:hover {
-            background-color: #ffd700; /* Gold */
-            color: white;
-        }
-
-        /* Header */
         header {
-            background-color: #ffd700; /* Golden yellow */
-            color: #4b0082;
-            text-align: center;
-            padding: 20px;
-        }
-
-        /* Introduction Section */
-        #intro {
-            background-color: #5A1A8A; /* Dark Purple */
+            background-color: #4CAF50;
             color: white;
-            padding: 40px;
-            text-align: center;
-        }
-
-        /* Tariffs Section */
-        #tariffs {
-            text-align: center;
-            margin: 20px;
             padding: 20px;
-            border: 2px solid #ffd700;
-            border-radius: 10px;
-            background-color: #fff8dc; /* Light cream yellow */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-
-        #tariffs h3 {
-            color: #4b0082; /* Purple */
-            font-size: 2em;
-            margin-bottom: 10px;
-        }
-
-        #tariffs p {
-            font-size: 1.2em;
-        }
-
-        /* Footer */
-        footer {
             text-align: center;
-            background-color: #ffd700; /* Golden yellow */
-            color: #4b0082;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
         }
-
-        /* Language Switcher */
-        .language-switcher {
-            text-align: center;
+        section {
+            padding: 20px;
+        }
+        #services, #testimonials, #student-needs {
+            background-color: #ffffff;
             margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
-
-        .language-switcher select {
-            padding: 10px 15px;
-            margin: 5px;
-            border: none;
-            border-radius: 5px;
-            background-color: #4b0082; /* Purple */
+        h2 {
+            color: #4CAF50;
+        }
+        .testimonial {
+            background-color: #f9f9f9;
+            margin: 10px;
+            padding: 15px;
+            border-left: 5px solid #4CAF50;
+        }
+        footer {
+            background-color: #333;
             color: white;
-            cursor: pointer;
+            padding: 10px;
+            text-align: center;
         }
-
-        .language-switcher select:hover {
-            background-color: #ffd700; /* Gold */
-            color: #4b0082;
-        }
-
-        /* Image Styles */
-        img {
-            display: block;
-            margin: 20px auto;
-            max-width: 50%; /* Resizing the image to 50% */
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Responsive Styles */
-        @media screen and (max-width: 768px) {
-            nav ul li {
-                display: block;
-                margin-right: 0;
-                margin-bottom: 10px;
-            }
-
-            header h1 {
-                font-size: 1.5em;
-            }
-
-            #intro {
-                padding: 20px;
-            }
-
-            #tariffs {
-                font-size: 1.2em;
-            }
-
-            img {
-                max-width: 90%; /* Resize image for small screens */
-            }
+        ul {
+            list-style-type: none;
         }
     </style>
 </head>
 <body>
-    <!-- Navigation Menu -->
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
-            <li><a href="teacher-info.html">Teacher Info</a></li>
-        </ul>
-    </nav>
 
-    <!-- Banner Image -->
-    <img src="IMG_2556.jpg" alt="French Teacher Home Page Banner">
+<header>
+    <h1>Learn French with Meriem Bensaid</h1>
+    <p>Expert French Lessons in English, Arabic, French, and German</p>
+</header>
 
-    <!-- Main Header -->
-    <header>
-        <h1>Welcome to French Lessons with Meriem!</h1>
-        <p>Experienced French teacher with 10 years of expertise.</p>
-        <p><strong>Languages I speak:</strong> French, English, Arabic, and German</p>
-    </header>
+<section id="services">
+    <h2>My Services</h2>
+    <ul>
+        <li>Personalized French Lessons for All Levels</li>
+        <li>Conversational French Practice</li>
+        <li>French for Business and Diplomacy</li>
+        <li>Exam Preparation (DALF, DELF, etc.)</li>
+        <li>Fun and Interactive Learning Methods</li>
+    </ul>
+</section>
 
-    <!-- Introduction Section -->
-    <section id="intro">
-        <h2>Learn French with a Skilled Teacher</h2>
-        <p>With over 10 years of experience, I specialize in teaching professionals, kids, families, and diplomats. Whether you're starting from scratch, need to improve your pronunciation, grammar, or prepare for exams, I can guide you through the learning process. I also help you learn to write official documents with confidence.</p>
-        <p><strong>Languages I speak:</strong> French, English, Arabic, and German. This allows me to teach you in your preferred language!</p>
-    </section>
-
-    <!-- Tariffs Section -->
-    <section id="tariffs">
-        <h3>TARIFS</h3>
-        <p>€15 for 90 minutes</p>
-        <p>Special Packs:</p>
-        <ul>
-            <li>€150 for 12 lessons (standard pack)</li>
-            <li>€200 for 15 pronunciation lessons (pronunciation pack)</li>
-        </ul>
-    </section>
-
-    <!-- Testimonials Section -->
-    <section id="testimonials">
-        <h2>What My Students Say</h2>
-        <p>"Meriem helped me pass my French exams for diplomacy. Her teaching methods were practical and effective, and I felt confident during my exams. I couldn't have done it without her!" - Spanish Diplomat</p>
-        <p>"Meriem is an incredible teacher. I started learning French from scratch, and now I feel almost fluent. Her patience and fun lessons made learning a pleasure." - Stay-at-home mother, Dubai</p>
-        <p>"As an aerospace researcher from the UAE, I needed French for my work. Meriem tailored the lessons to my needs, and now I can read technical papers with ease." - Aerospace Researcher, UAE</p>
-    </section>
-
-    <!-- Language Switcher -->
-    <div class="language-switcher">
-        <label for="language-select">Choose a language:</label>
-        <select id="language-select" onchange="switchLanguage()">
-            <option value="index-en.html">English</option>
-            <option value="index-ar.html">Arabic</option>
-            <option value="index-de.html">German</option>
-        </select>
+<section id="testimonials">
+    <h2>What My Students Say</h2>
+    <div class="testimonial">
+        <p><strong>Samia & Sarah (Saudi Arabia):</strong> "Meriem helped us learn French from scratch. It was a fun and engaging experience, and we’re now confident speakers! Her approach made learning enjoyable and effective." </p>
     </div>
+    <div class="testimonial">
+        <p><strong>A Stay-at-Home Mother (Dubai):</strong> "I started learning French to connect with my family in France. With Meriem's help, I’m now almost fluent and continuing to progress every day. She’s an incredible teacher!" </p>
+    </div>
+    <div class="testimonial">
+        <p><strong>Aerospace Researcher (UAE):</strong> "I needed French for my research and Meriem made sure I understood the technical vocabulary while keeping lessons engaging. I’m now able to use French confidently in my field." </p>
+    </div>
+    <div class="testimonial">
+        <p><strong>Spanish Diplomat:</strong> "I needed to pass my French exam for diplomacy. Thanks to Meriem's targeted lessons and understanding of the exam structure, I passed with flying colors!"</p>
+    </div>
+</section>
 
-    <!-- Footer -->
-    <footer>
-        <p>Contact me at: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-    </footer>
+<section id="student-needs">
+    <h2>Understanding Your Challenges</h2>
+    <p>Learning French can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
+    <ul>
+        <li>Pronunciation challenges</li>
+        <li>Verb conjugation and grammar complexity</li>
+        <li>Difficulty finding speaking practice</li>
+        <li>Maintaining motivation and consistency</li>
+        <li>Overwhelming vocabulary and fear of mistakes</li>
+    </ul>
+    <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
+</section>
 
-    <script>
-        function switchLanguage() {
-            const selectedLanguage = document.getElementById("language-select").value;
-            window.location.href = selectedLanguage;
-        }
-    </script>
+<footer>
+    <p>Contact me for more information or to schedule your first lesson!</p>
+    <p>Email: <a href="mailto:meriem@example.com">meriem@example.com</a></p>
+</footer>
+
 </body>
 </html>
