--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn French with Meriem Bensaid. Offering personalized French lessons in English, Arabic, French, and German. Expert in French for all levels.">
-    <title>Learn French with Meriem Bensaid</title>
+    <meta name="description" content="Learn French with Meriem. Offering personalized French lessons in English, Arabic, French, and German. Expert in French for all levels.">
+    <title>Learn French with Meriem</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -46,14 +46,49 @@
         ul {
             list-style-type: none;
         }
+        nav {
+            background-color: #333;
+            padding: 10px;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px;
+            margin: 0 10px;
+            border-radius: 5px;
+        }
+        nav a:hover {
+            background-color: #4CAF50;
+        }
+        #teacher-info {
+            background-image: url('teacher-image.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 300px;
+            color: white;
+            text-align: center;
+            padding: 50px;
+        }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>Learn French with Meriem Bensaid</h1>
+    <h1>Learn French with Meriem</h1>
     <p>Expert French Lessons in English, Arabic, French, and German</p>
 </header>
+
+<nav>
+    <a href="#services">Services</a>
+    <a href="#blog">Blog</a>
+    <a href="#teacher-info">Teacher Info</a>
+</nav>
+
+<section id="teacher-info">
+    <h2>About Meriem</h2>
+    <p>With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
+</section>
 
 <section id="services">
     <h2>My Services</h2>
@@ -86,11 +121,11 @@
     <h2>Understanding Your Challenges</h2>
     <p>Learning French can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
     <ul>
-        <li>Pronunciation challenges</li>
-        <li>Verb conjugation and grammar complexity</li>
-        <li>Difficulty finding speaking practice</li>
-        <li>Maintaining motivation and consistency</li>
-        <li>Overwhelming vocabulary and fear of mistakes</li>
+        <li>Pronunciation challenges (les difficultés de prononciation)</li>
+        <li>Verb conjugation and grammar complexity (la conjugaison des verbes et la complexité de la grammaire)</li>
+        <li>Difficulty finding speaking practice (difficulté à trouver des occasions de pratiquer la langue)</li>
+        <li>Maintaining motivation and consistency (maintenir la motivation et la constance)</li>
+        <li>Overwhelming vocabulary and fear of mistakes (vocabulaire accablant et peur des erreurs)</li>
     </ul>
     <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
 </section>
