--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
             background-color: #4CAF50;
         }
         #teacher-info {
-            background-image: url('teacher-image.jpg');
+            background-image: url('your-image-path.jpg'); /* Replace with correct path */
             background-size: cover;
             background-position: center;
             height: 300px;
             color: white;
             text-align: center;
             padding: 50px;
+        }
+        #teacher-info p {
+            font-size: 18px;
         }
     </style>
 </head>
@@ -85,6 +88,7 @@
     <a href="#teacher-info">Teacher Info</a>
 </nav>
 
+<!-- Teacher Info Section with unique content -->
 <section id="teacher-info">
     <h2>About Meriem</h2>
     <p>With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
