--- a/index.html
+++ b/index.html
@@ -63,16 +63,17 @@
         }
         #teacher-info {
             background-image: url('IMG_2556.jpg'); /* Corrected image path */
-            background-size: cover;
+            background-size: contain; /* Adjust image size */
             background-position: center;
-            height: 300px;
+            height: 250px; /* Reduced height for smaller image */
             color: white;
             text-align: center;
             padding: 50px;
         }
         #teacher-info p {
-            font-size: 18px;
-            color: white; /* Ensured text is visible */
+            font-size: 20px;
+            color: black; /* Changed text color to black */
+            font-weight: bold; /* Made text bold */
         }
         .teacher-info-link {
             color: white;
