--- a/index.html
+++ b/index.html
@@ -3,158 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn French with Meriem. Offering personalized French lessons in English, Arabic, French, and German. Expert in French for all levels.">
-    <title>Learn French with Meriem</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        section {
-            padding: 20px;
-        }
-        #services, #testimonials, #student-needs {
-            background-color: #ffffff;
-            margin: 20px 0;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        h2 {
-            color: #4CAF50;
-        }
-        .testimonial {
-            background-color: #f9f9f9;
-            margin: 10px;
-            padding: 15px;
-            border-left: 5px solid #4CAF50;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            text-align: center;
-        }
-        ul {
-            list-style-type: none;
-        }
-        nav {
-            background-color: #333;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 10px;
-            margin: 0 10px;
-            border-radius: 5px;
-        }
-        nav a:hover {
-            background-color: #4CAF50;
-        }
-        #teacher-info {
-            background-image: url('IMG_2556.jpg'); /* Corrected image path */
-            background-size: cover; /* Ensures the image covers the area without repeating */
-            background-position: center;
-            height: 250px; /* Adjusted height */
-            color: white;
-            text-align: center;
-            padding: 50px 20px 20px 20px; /* Adjusted padding to avoid text overlap */
-            position: relative;
-        }
-        #teacher-info p {
-            font-size: 20px;
-            color: black; /* Changed text color to black */
-            font-weight: bold; /* Made text bold */
-            position: absolute; /* Absolute positioning for text */
-            top: 10px; /* Adjusted to keep the text above the image */
-            width: 100%; /* Ensure the text takes the full width */
-            text-align: center; /* Center the text */
-        }
-        .teacher-info-link {
-            color: white;
-            background-color: #4CAF50;
-            padding: 10px 20px;
-            border-radius: 5px;
-            text-decoration: none;
-        }
-        .teacher-info-link:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <title>French Lessons with Meriem</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="teacher-info.html">Teacher Info</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<header>
-    <h1>Learn French with Meriem</h1>
-    <p>Expert French Lessons in English, Arabic, French, and German</p>
-</header>
+    <main>
+        <section id="about">
+            <div class="about-container">
+                <div class="text-content">
+                    <h2>About Me</h2>
+                    <p class="highlighted-text">
+                        <strong>
+                            With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.
+                        </strong>
+                    </p>
+                </div>
+                <div class="image-container">
+                    <img src="IMG_2556.jpg" alt="French Lessons" class="about-image">
+                </div>
+            </div>
+        </section>
 
-<nav>
-    <a href="#services">Services</a>
-    <a href="blog.html">Blog</a> <!-- Link to blog page -->
-    <a href="teacher-info.html">Teacher Info</a> <!-- Link to teacher info page -->
-</nav>
+        <section id="services">
+            <h2>Services</h2>
+            <p>I offer tailored French lessons for all levels, including:</p>
+            <ul>
+                <li>Beginner to advanced French</li>
+                <li>French for exams and certifications</li>
+                <li>French for business and travel</li>
+                <li>Conversation practice</li>
+            </ul>
+        </section>
 
-<!-- Teacher Info Section with unique content -->
-<section id="teacher-info">
-    <p>With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
-    <a href="teacher-info.html" class="teacher-info-link">Learn More About My Teaching Approach</a>
-</section>
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:meriem@example.com">meriem@example.com</a></p>
+        </section>
+    </main>
 
-<section id="services">
-    <h2>My Services</h2>
-    <ul>
-        <li>Personalized French Lessons for All Levels</li>
-        <li>Conversational French Practice</li>
-        <li>French for Business and Diplomacy</li>
-        <li>Exam Preparation (DALF, DELF, etc.)</li>
-        <li>Fun and Interactive Learning Methods</li>
-    </ul>
-</section>
-
-<section id="testimonials">
-    <h2>What My Students Say</h2>
-    <div class="testimonial">
-        <p><strong>Samia & Sarah (Saudi Arabia):</strong> "Meriem helped us learn French from scratch. It was a fun and engaging experience, and we’re now confident speakers! Her approach made learning enjoyable and effective." </p>
-    </div>
-    <div class="testimonial">
-        <p><strong>A Stay-at-Home Mother (Dubai):</strong> "I started learning French to connect with my family in France. With Meriem's help, I’m now almost fluent and continuing to progress every day. She’s an incredible teacher!" </p>
-    </div>
-    <div class="testimonial">
-        <p><strong>Aerospace Researcher (UAE):</strong> "I needed French for my research and Meriem made sure I understood the technical vocabulary while keeping lessons engaging. I’m now able to use French confidently in my field." </p>
-    </div>
-    <div class="testimonial">
-        <p><strong>Spanish Diplomat:</strong> "I needed to pass my French exam for diplomacy. Thanks to Meriem's targeted lessons and understanding of the exam structure, I passed with flying colors!"</p>
-    </div>
-</section>
-
-<section id="student-needs">
-    <h2>Understanding Your Challenges</h2>
-    <p>Learning French can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
-    <ul>
-        <li>Pronunciation challenges (les difficultés de prononciation)</li>
-        <li>Verb conjugation and grammar complexity (la conjugaison des verbes et la complexité de la grammaire)</li>
-        <li>Difficulty finding speaking practice (difficulté à trouver des occasions de pratiquer la langue)</li>
-        <li>Maintaining motivation and consistency (maintenir la motivation et la constance)</li>
-        <li>Overwhelming vocabulary and fear of mistakes (vocabulaire accablant et peur des erreurs)</li>
-    </ul>
-    <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
-</section>
-
-<footer>
-    <p>Contact me for more information or to schedule your first lesson!</p>
-    <p>Email: <a href="mailto:meriem@example.com">meriem@example.com</a></p>
-</footer>
-
+    <footer>
+        <p>&copy; 2024 French Lessons with Meriem. All rights reserved.</p>
+    </footer>
 </body>
 </html>
