--- a/index.html
+++ b/index.html
@@ -3,58 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>French Lessons with Meriem</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Learn French with Meriem, an experienced teacher offering personalized lessons for all levels. Overcome pronunciation challenges, master grammar, and speak confidently.">
+    <meta name="keywords" content="Learn French, French lessons, French tutor, online French teacher, French for exams, French for beginners">
+    <meta name="author" content="Meriem">
+    <title>Learn French with Meriem</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
                 <li><a href="teacher-info.html">Teacher Info</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="#services">Services</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section id="about">
-            <div class="about-container">
-                <div class="text-content">
-                    <h2>About Me</h2>
-                    <p class="highlighted-text">
-                        <strong>
-                            With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.
-                        </strong>
-                    </p>
-                </div>
-                <div class="image-container">
-                    <img src="IMG_2556.jpg" alt="French Lessons" class="about-image">
-                </div>
-            </div>
-        </section>
+    <section id="hero">
+        <img src="IMG_2556.jpg" alt="Learn French" style="width: 60%; display: block; margin: 0 auto;">
+        <div style="text-align: center; margin-top: 20px;">
+            <p style="font-size: 1.5em; font-weight: bold; color: black;">With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
+        </div>
+    </section>
 
-        <section id="services">
-            <h2>Services</h2>
-            <p>I offer tailored French lessons for all levels, including:</p>
-            <ul>
-                <li>Beginner to advanced French</li>
-                <li>French for exams and certifications</li>
-                <li>French for business and travel</li>
-                <li>Conversation practice</li>
-            </ul>
-        </section>
+    <section id="student-needs">
+        <h2>Understanding Your Challenges</h2>
+        <p>Learning French (apprendre le français) can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
+        <ul>
+            <li>Pronunciation challenges (les défis de la prononciation)</li>
+            <li>Verb conjugation and grammar complexity (la conjugaison des verbes et la complexité de la grammaire)</li>
+            <li>Difficulty finding speaking practice (la difficulté à pratiquer l'oral)</li>
+            <li>Maintaining motivation and consistency (le maintien de la motivation et de la régularité)</li>
+            <li>Overwhelming vocabulary and fear of mistakes (le vocabulaire écrasant et la peur de faire des erreurs)</li>
+        </ul>
+        <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
+    </section>
 
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:meriem@example.com">meriem@example.com</a></p>
-        </section>
-    </main>
+    <section id="services">
+        <h2>My Services</h2>
+        <ul>
+            <li>Customized lessons for all levels</li>
+            <li>French for travel, business, and exams</li>
+            <li>Interactive speaking practice</li>
+            <li>Focus on grammar, vocabulary, and pronunciation</li>
+            <li>Support for children and adults</li>
+        </ul>
+    </section>
+
+    <section id="testimonials">
+        <h2>Testimonials</h2>
+        <p><strong>Samia and Sarah (Saudi Arabia):</strong> "Meriem made learning French from scratch enjoyable and effective. We had so much fun and learned a lot!"</p>
+        <p><strong>Stay-at-home mother (Dubai):</strong> "Thanks to Meriem, I'm almost fluent in French. Her lessons are engaging and tailored to my needs."</p>
+        <p><strong>Aeronautics researcher (UAE):</strong> "Meriem helped me learn French for research purposes. Her clear explanations were invaluable."</p>
+        <p><strong>Spanish diplomat:</strong> "Meriem’s guidance helped me pass my French exams for diplomacy with confidence and success."</p>
+    </section>
 
     <footer>
-        <p>&copy; 2024 French Lessons with Meriem. All rights reserved.</p>
+        <p>© 2024 Learn French with Meriem. All rights reserved.</p>
     </footer>
 </body>
 </html>
