--- a/index.html
+++ b/index.html
@@ -24,27 +24,27 @@
     </header>
 
     <section id="hero">
-        <img src="IMG_2556.jpg" alt="Learn French" style="width: 60%; display: block; margin: 0 auto;">
+        <img src="IMG_2556.jpg" alt="Learn French" style="width: 50%; display: block; margin: 0 auto;">
         <div style="text-align: center; margin-top: 20px;">
             <p style="font-size: 1.5em; font-weight: bold; color: black;">With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
         </div>
     </section>
 
     <section id="student-needs">
-        <h2>Understanding Your Challenges</h2>
-        <p>Learning French (apprendre le français) can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
+        <h2 style="font-weight: bold;">Understanding Your Challenges</h2>
+        <p>Learning French (<em>apprendre le français</em>) can be challenging, but with the right support, it becomes enjoyable and rewarding. I understand the difficulties students face, such as:</p>
         <ul>
-            <li>Pronunciation challenges (les défis de la prononciation)</li>
-            <li>Verb conjugation and grammar complexity (la conjugaison des verbes et la complexité de la grammaire)</li>
-            <li>Difficulty finding speaking practice (la difficulté à pratiquer l'oral)</li>
-            <li>Maintaining motivation and consistency (le maintien de la motivation et de la régularité)</li>
-            <li>Overwhelming vocabulary and fear of mistakes (le vocabulaire écrasant et la peur de faire des erreurs)</li>
+            <li><strong>Pronunciation challenges</strong> (<em>les défis de la prononciation</em>)</li>
+            <li><strong>Verb conjugation and grammar complexity</strong> (<em>la conjugaison des verbes et la complexité de la grammaire</em>)</li>
+            <li><strong>Difficulty finding speaking practice</strong> (<em>la difficulté à pratiquer l'oral</em>)</li>
+            <li><strong>Maintaining motivation and consistency</strong> (<em>le maintien de la motivation et de la régularité</em>)</li>
+            <li><strong>Overwhelming vocabulary and fear of mistakes</strong> (<em>le vocabulaire écrasant et la peur de faire des erreurs</em>)</li>
         </ul>
         <p>As a teacher, I focus on addressing these challenges by providing clear explanations, personalized lessons, practical speaking opportunities, and consistent feedback to keep you motivated and progressing.</p>
     </section>
 
     <section id="services">
-        <h2>My Services</h2>
+        <h2 style="font-weight: bold;">My Services</h2>
         <ul>
             <li>Customized lessons for all levels</li>
             <li>French for travel, business, and exams</li>
@@ -54,8 +54,14 @@
         </ul>
     </section>
 
+    <section id="tariffs" style="background-color: #f9f9f9; padding: 20px; margin: 20px 0; text-align: center; border: 1px solid #ddd;">
+        <h2 style="font-weight: bold;">Tariffs</h2>
+        <p style="font-size: 1.2em;">💰 <strong>150 Euros</strong> for 12 lessons of 90 minutes</p>
+        <p style="font-size: 1.2em;">💰 <strong>200 Euros</strong> for 15 pronunciation lessons of 90 minutes</p>
+    </section>
+
     <section id="testimonials">
-        <h2>Testimonials</h2>
+        <h2 style="font-weight: bold;">Testimonials</h2>
         <p><strong>Samia and Sarah (Saudi Arabia):</strong> "Meriem made learning French from scratch enjoyable and effective. We had so much fun and learned a lot!"</p>
         <p><strong>Stay-at-home mother (Dubai):</strong> "Thanks to Meriem, I'm almost fluent in French. Her lessons are engaging and tailored to my needs."</p>
         <p><strong>Aeronautics researcher (UAE):</strong> "Meriem helped me learn French for research purposes. Her clear explanations were invaluable."</p>
