--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="teacher-info.html">Teacher Info</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
                 <li><a href="#contact">Contact</a></li>
