--- a/faq.html
+++ b/faq.html
@@ -130,35 +130,31 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>FAQ - Learn French with Meriem</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>My Blog</h1>
+      <h1>Frequently Asked Questions</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="blog.html">Blog</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="teacher-info.html">Teacher Info</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <h2>Recent Blog Posts</h2>
-        <article>
-            <h3>Blog Post Title 1</h3>
-            <p>This is the content of the first blog post. You can add more posts here!</p>
-        </article>
-        <article>
-            <h3>Blog Post Title 2</h3>
-            <p>This is the content of the second blog post. Keep adding posts as you go!</p>
-        </article>
-    </main>
+    <h2>Frequently Asked Questions</h2>
+    <section>
+        <h3>How can I improve my French pronunciation?</h3>
+        <p>Answer: [Your answer here]</p>
+    </section>
+    <section>
+        <h3>What is the best way to learn French grammar?</h3>
+        <p>Answer: [Your answer here]</p>
+    </section>
+    <!-- Add more questions and answers as needed -->
+</main>
 
-    <footer>
-        <p>© 2024 My Website. All rights reserved.</p>
-    </footer>
-</body>
-</html>
