--- a/faq.html
+++ b/faq.html
@@ -135,7 +135,7 @@
 </head>
 <body>
     <header>
-      <h1>Frequently Asked Questions</h1>
+        <h1>Frequently Asked Questions</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -146,15 +146,61 @@
     </header>
 
     <main>
-    <h2>Frequently Asked Questions</h2>
-    <section>
-        <h3>How can I improve my French pronunciation?</h3>
-        <p>Answer: [Your answer here]</p>
-    </section>
-    <section>
-        <h3>What is the best way to learn French grammar?</h3>
-        <p>Answer: [Your answer here]</p>
-    </section>
-    <!-- Add more questions and answers as needed -->
-</main>
+        <h2>Frequently Asked Questions</h2>
 
+        <section>
+            <h3>How can I improve my French pronunciation?</h3>
+            <p>Improving French pronunciation can be simpler than you think! I use a straightforward phonetic method that focuses on effortlessly switching between high and low tones. This approach is combined with frequent reading practice and regular breaks to allow you to repeat and master the essential French vowels and sounds. My students have seen great success with this method, which helps build confidence and clarity in speaking French.</p>
+        </section>
+
+        <section>
+            <h3>What are the most common challenges when learning French?</h3>
+            <p>French learners often face a few common challenges. Pronunciation can be tricky, which is why I integrate it into every lesson. Reflexive verbs can also be difficult at first, but with consistent practice, they become much easier to grasp. Conjugation, especially with irregular verbs, is another hurdle for many learners, but I have a proven method to help students master it. Additionally, lack of speaking practice with others is a frequent issue, which is why I organize free Zoom meetings for students to practice speaking French in a relaxed, supportive environment.</p>
+        </section>
+
+        <section>
+            <h3>How long does it take to learn French?</h3>
+            <p>The time it takes to learn French depends on your goals and whether you already have some knowledge of the language. If you're starting from scratch, I can help you reach a B1 level in just six months. With consistent lessons and focused practice, you'll see significant progress and be able to communicate comfortably in everyday situations.</p>
+        </section>
+
+        <section>
+            <h3>How can I improve my French speaking skills?</h3>
+            <p>To improve your French speaking skills, consistent practice is key. The best way to expand your vocabulary and improve fluency is through reading—the more you read, the more vocabulary you'll acquire naturally. Additionally, I organize free Zoom meetings for my students where we practice speaking together. This allows us to spot mistakes in real time, correct them, and learn from each other, creating a collaborative and engaging learning environment.</p>
+        </section>
+
+        <section>
+            <h3>What are some common mistakes that beginners make when learning French, and how can they be avoided?</h3>
+            <p>One common mistake beginners make is focusing too much on vocabulary rather than verbs. In French, verbs are the foundation of a sentence, and understanding them—along with their tenses—forms the core of the language. Once you know your verbs, you’re already halfway to mastering French. Another mistake is staying within the comfort zone. For instance, if your goal is to pass an exam, it's important, but it’s also crucial to practice speaking in real-life situations. Pushing beyond the exam material helps you become more fluent and confident in conversations.</p>
+        </section>
+
+        <section>
+            <h3>How can I improve my French speaking skills quickly?</h3>
+            <p>Too much learning at once can be overwhelming. It's better to alternate between intensive learning and breaks, allowing the information to settle and enhance understanding. The key to improving speaking skills is mastering the basics: understanding the topic, pronouncing words correctly, and structuring sentences properly. Speaking confidently comes from mastering these elements. Once you've done that, you'll feel confident even speaking to Napoleon effortlessly!</p>
+        </section>
+
+        <section>
+            <h3>How do I overcome the fear of making mistakes in French?</h3>
+            <p>Fear of making mistakes is not about the language itself, but rather a pattern shaped by experiences and thoughts. In my lessons, I ensure to create a caring and safe learning environment, where mistakes are not something to fear but an opportunity for growth. If French is not your native language and you're on the journey to mastering it, you should be proud of yourself—chapeau bas! Many native French speakers make mistakes too, and they don't always correct them. As a learner, however, your mistakes will be addressed, and this helps you improve and even speak more accurately than some natives! So, go for it with confidence!</p>
+        </section>
+
+        <section>
+            <h3>How can I stay motivated to learn French consistently?</h3>
+            <p>Your motivation is also part of your teacher job. You need a sympa, understanding, fun teacher for that. Here I am haha. Combining conventional and unconventional lessons according to the needs is also essential to keep things fresh and exciting.</p>
+        </section>
+
+        <section>
+            <h3>How can I improve my French listening skills?</h3>
+            <p>The best way to improve your French listening skills is by exposing yourself to a variety of topics each week, instead of focusing on just one domain. This helps you get accustomed to different accents, vocabulary, and speaking speeds. Additionally, listening alongside your teacher and taking breaks to repeat what was said can significantly improve your comprehension and retention. By consistently practicing in this way, you’ll see steady progress in understanding spoken French.</p>
+        </section>
+
+        <section>
+            <h3>How can I improve my French writing skills?</h3>
+            <p>Writing in French involves more than just spelling; it requires understanding the rules of grammar, such as gender usage, conjugation, pronouns, and adjective agreement. One effective way to improve writing skills is through dictée sessions, though these are usually introduced once you've built a solid foundation in speaking. Remember, speech comes before writing! We’ll first focus on getting you comfortable with speaking and the language’s structure. As you progress, writing will become easier and more natural. This approach ensures you’re ready to tackle French writing with confidence.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2024 My Website. All rights reserved.</p>
+    </footer>
+</body>
+</html>
