--- a/faq.html
+++ b/faq.html
@@ -199,8 +199,13 @@
         </section>
     </main>
 
-    <footer>
-        <p>© 2024 My Website. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+   footer {
+    text-align: center;
+    background-color: #ffd700; /* Golden yellow */
+    color: #4b0082;
+    height: 40px;  /* Adjusted to make it smaller */
+    line-height: 40px; /* Keeps text centered vertically */
+    padding: 0; /* Remove any extra padding */
+    position: relative;
+    width: 100%;
+}
