--- a/faq.html
+++ b/faq.html
@@ -209,3 +209,9 @@
     position: relative;
     width: 100%;
 }
+   <footer>
+    <p>© 2024 My Website. All rights reserved.</p>
+</footer>
+</body>
+</html>
+
