--- a/faq.html
+++ b/faq.html
@@ -199,7 +199,8 @@
         </section>
     </main>
 
-   footer {
+      <footer>
+ {
     text-align: center;
     background-color: #ffd700; /* Golden yellow */
     color: #4b0082;
