--- a/faq.html
+++ b/faq.html
@@ -2,6 +2,19 @@
 <html lang="en">
 <head>
    <style>
+    footer {
+        text-align: center;
+        background-color: #ffd700; /* Golden yellow */
+        color: #4b0082; /* Indigo text */
+        height: 20px; /* Makes the footer smaller */
+        line-height: 20px; /* Centers the text vertically */
+        padding: 0; /* No extra space */
+        position: relative;
+        width: 100%; /* Spans the entire width */
+    }
+</style>
+
+   <style>
         /* Basic styling to make the navigation visible */
         nav ul {
             list-style-type: none;
