--- a/teacher-info.html
+++ b/teacher-info.html
@@ -111,7 +111,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="faq.html">FAQ</a></li>
             <li><a href="teacher-infos.html">Teacher Info</a></li>
         </ul>
     </nav>
