--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section id="contact">
+    <h2><a href="mailto:your-email@example.com" style="text-decoration: none; color: inherit;">Contact</a></h2>
+    <p>Feel free to reach out to us at:</p>
+    <a href="mailto:your-email@example.com" style="text-decoration: underline; color: #0000EE;">your-email@example.com</a>
+</section>
+    
     <header>
         <nav>
             <ul>
