--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <section id="contact">
-    <h2><a href="mailto:your-email@example.com" style="text-decoration: none; color: inherit;">Contact</a></h2>
-    <p>Feel free to reach out to us at:</p>
+    <h2><a href="mailto:frenchforeveryone74@gmail.com" style="text-decoration: none; color: inherit;">Contact</a></h2>
+    <p>Feel free to reach out to me at:</p>
     <a href="mailto:your-email@example.com" style="text-decoration: underline; color: #0000EE;">your-email@example.com</a>
 </section>
     
