--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section id="contact">
+    <section id="CONTACT">
     <h2><a href="mailto:frenchforeveryone74@gmail.com" style="text-decoration: none; color: inherit;">Contact</a></h2>
     <p>Feel free to reach out to me at:</p>
     <a href="mailto:frenchforeveryone74@gmail.com" style="text-decoration: underline; color: #0000EE;">your-email@example.com</a>
@@ -24,7 +24,6 @@
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
