--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="CONTACT">
     <h2><a href="mailto:frenchforeveryone74@gmail.com" style="text-decoration: none; color: inherit;">Contact</a></h2>
     <p>Feel free to reach out to me at:</p>
-    <a href="mailto:frenchforeveryone74@gmail.com" style="text-decoration: underline; color: #0000EE;">your-email@example.com</a>
+    <a href="mailto:frenchforeveryone74@gmail.com" style="text-decoration: underline; color: #0000EE;">frenchforeveryone74@gmail.com</a>
 </section>
     
     <header>
