--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
     <p>Feel free to reach out to me at:</p>
     <a href="mailto:frenchforeveryone74@gmail.com" style="text-decoration: underline; color: #0000EE;">frenchforeveryone74@gmail.com</a>
 </section>
+    <section id="contact">
+  <h2>Contact Me</h2>
+  <p>Fill out this form, and I’ll get back to you soon!</p>
+  <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <label for="name">Full Name</label>
+    <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+
+    <label for="goals">Language Learning Goals</label>
+    <textarea id="goals" name="goals" placeholder="What do you want to focus on? Pronunciation, grammar, speaking, etc."></textarea>
+
+    <label for="availability">Preferred Lesson Times</label>
+    <input type="text" id="availability" name="availability" placeholder="Your availability (e.g., evenings, weekends)">
+
+    <button type="submit">Submit</button>
+  </form>
+</section>
+
     
     <header>
         <nav>
