--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     </header>
     <!-- Red Signal Box -->
 <div style="position: fixed; top: 20%; left: 10px; background-color: #ffcccc; color: red; padding: 10px; border: 2px solid red; border-radius: 5px; z-index: 1000; width: 250px;">
-    <h4 style="margin: 0; font-size: 1.1em;">🚨 6-Month Challenge</h4>
+    <h4 style="margin: 0; font-size: 1.1em;">🚨 6-Months Challenge</h4>
     <p style="margin: 5px 0; font-size: 0.9em;">90 min, 4x/week</p>
     <p style="margin: 5px 0; font-size: 0.9em;">💰 200 Euros/month</p>
-    <a href="challenge-form.html" style="font-size: 0.9em; font-weight: bold; color: white; background-color: red; padding: 5px 10px; text-decoration: none; border-radius: 3px; display: inline-block; text-align: center;">Join Now</a>
+    <a href="https://formspree.io/f/xvggoydk" style="font-size: 0.9em; font-weight: bold; color: white; background-color: red; padding: 5px 10px; text-decoration: none; border-radius: 3px; display: inline-block; text-align: center;">Join Now</a>
 </div>
 
     <section id="hero">
